<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
    <!ENTITY app_name "SpaccWebView Application">
    <!ENTITY about_app "About App">
    <!ENTITY exit "Exit">
    <!ENTITY hide "Hide">
    <!ENTITY reload "Reload">
    <!ENTITY stop_loading "Stop Loading">
    <!ENTITY backwards "Backwards">
    <!ENTITY forward "Forward">
    <!ENTITY open "Open">
    <!ENTITY open_externally "&open; Externally">
    <!ENTITY copy_url "Copy URL">
    <!ENTITY execute_javascript "Execute JavaScript">
]>
<resources>
    <string name="app_name" translatable="false">&app_name;</string>
    <string name="about_app">&about_app;</string>
    <string name="about_app_menu">ℹ️ &about_app;</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="exit">&exit;</string>
    <string name="exit_menu">🚪 &exit;</string>
    <string name="hide">&hide;</string>
    <string name="hide_menu">🕳️ &hide;</string>
    <string name="move_app_data">Move App Data</string>
    <string name="move_app_data_info">The app has been transferred to a different storage location. The data will be moved now.</string>
    <string name="loading">Loading</string>
    <string name="reload">&reload;</string>
    <string name="reload_menu">🔄 &reload;</string>
    <string name="stop_loading">&stop_loading;</string>
    <string name="stop_loading_menu">🛑 &stop_loading;</string>
    <string name="backwards">&backwards;</string>
    <string name="backwards_menu">⏮️ &backwards;</string>
    <string name="forward">&forward;</string>
    <string name="forward_menu">⏭️ &forward;</string>
    <string name="open">&open;</string>
    <string name="open_menu">👌 &open;</string>
    <string name="open_externally">&open_externally;</string>
    <string name="open_externally_menu">☝️ &open_externally;</string>
    <string name="copy_url">&copy_url;</string>
    <string name="copy_url_menu">🔗 &copy_url;</string>
    <string name="execute_javascript">&execute_javascript;</string>
    <string name="execute_javascript_menu">🔣 &execute_javascript;</string>
</resources>